Add libsql driver adapter

--- a/query-engine/driver-adapters/js/pnpm-workspace.yaml
+++ b/query-engine/driver-adapters/js/pnpm-workspace.yaml
@@ -2,5 +2,6 @@ packages:
   - './adapter-neon'
   - './adapter-planetscale'
   - './adapter-pg'
+  - './adapter-libsql'
   - './driver-adapter-utils'
   - './smoke-test-js'
